==> baquerrj/ecen5013_project2/TIVA/source/max7219.c <==
#include <stdbool.h>
#include <stdio.h>
#include <string.h>
#include <stdint.h>
#include "inc/hw_memmap.h"
#include "driverlib/rom_map.h"
#include "driverlib/pin_map.h"
#include "driverlib/sysctl.h"
#include "driverlib/gpio.h"
#include "max7219.h"

void maxSendSequence(uint8_t *pSequence, uint8_t len)
{
  // The CS line stays low throughout a "transaction". Send all of the control uint8_ts for all of the chained
  // controllers in a single transaction. When the CS line rises, the data will be latched
    maxSetAddress( *pSequence );
    pSequence++;
    spi_write_packet( my_spi, pSequence, len );
    GPIOPinWrite( MAX7219_CS_PORT, MAX7219_CS_PIN, 1 );
}

int maxInit(uint8_t iNum, uint8_t bDecodeMode, spi_e iChannel, uint8_t iSelect)
{
    my_spi = iChannel;
    spi_clock_init( my_spi );
    spi_init( my_spi );

  iNumControllers = iNum;
  iCSPin = iSelect; // header pin number used for select line
  //file_spi = AIOOpenSPI(iChannel, 2000000); // 2Mhz is a reasonable speed

  MAP_SysCtlPeripheralEnable( MAX7219_CS_SYSCLT_PORT );
  GPIOPinTypeGPIOOutput( MAX7219_CS_PORT, MAX7219_CS_PIN );
  GPIOPinWrite( MAX7219_CS_PORT, MAX7219_CS_PIN, MAX7219_CS_PIN );

 // AIOAddGPIO(iCSPin, GPIO_OUT);
  //AIOWriteGPIO(iCSPin, 1);

  maxPowerUp(1); // turn on the LED controllers
  maxSetLimit(8); // tell it to display 8 rows of 8 pixels
  maxSetIntensity(0); // set the minimum intensity to start (1/32 duty cycle)
  maxSetSegmentMode(bDecodeMode); // sets BCD (7-segment), or none (pixels
  maxSetTestMode(0); // disable test mode (it can accidentally get set at power up)
  return 0;
}
