==> bitbank2/MAX7219/Arduino/max7219.cpp <==
#include <Arduino.h>
#include <max7219.h>
#include <SPI.h>
#include <avr/pgmspace.h>

static void maxSendSequence(byte *pSequence, byte len)
{
  // The CS line stays low throughout a "transaction". Send all of the control bytes for all of the chained
  // controllers in a single transaction. When the CS line rises, the data will be latched
   digitalWrite(bSelectPin, LOW); // 1Mhz is a good speed for the max7219
#ifdef USE_SPI
   SPI.transfer(pSequence, len);
#else
   myspi_transfer(pSequence, len);
#endif
   digitalWrite(bSelectPin, HIGH);
   
}

void maxInit(byte iNum, byte bDecodeMode, byte bClk, byte bData, byte bSel)
{

  bNumControllers = iNum;
  bClockPin = bClk;
  bDataPin = bData;
  bSelectPin = bSel;
  
  pinMode(bSelectPin, OUTPUT);
  digitalWrite(bSelectPin, HIGH);
#ifndef USE_SPI
  pinMode(bClockPin, OUTPUT);
  pinMode(bDataPin, OUTPUT);
#endif
  maxPowerUp(1); // turn on the LED controllers
  maxSetLimit(8); // tell it to display 8 rows of 8 pixels
  maxSetIntensity(0); // set the minimum intensity to start (1/32 duty cycle)
  maxSetSegmentMode(bDecodeMode); // sets BCD (7-segment), or none (pixels
  maxSetTestMode(0); // disable test mode (it can accidentally get set at power up) 
}
